Reading List data from Firestore Database. No Loader yet

--- a/app/src/main/res/layout/fragment_recipes_item.xml
+++ b/app/src/main/res/layout/fragment_recipes_item.xml
@@ -11,7 +11,7 @@
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="80dp">
 
     <TextView
         android:id="@+id/title"
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@{item.title}"
+        android:text="@{item.name}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
