--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -18,5 +18,9 @@
         android:id="@+id/recipeDetailsFragment"
         android:name="com.example.thecookbook.recipeDetails.RecipeDetailsFragment"
         android:label="fragment_recipe_details"
-        tools:layout="@layout/fragment_recipe_details" />
+        tools:layout="@layout/fragment_recipe_details" >
+        <argument
+            android:name="recipe"
+            app:argType="com.example.thecookbook.data.models.RecipeDataItem" />
+    </fragment>
 </navigation>
