--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -61,9 +61,11 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cvBody"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="-30dp"
+            android:layout_marginBottom="-30dp"
             app:cardCornerRadius="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cvHeader">
