--- a/app/src/main/res/xml/fragment_recipe_details_xml_constraintlayout3_scene.xml
+++ b/app/src/main/res/xml/fragment_recipe_details_xml_constraintlayout3_scene.xml
@@ -26,7 +26,9 @@
         <Constraint
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginBottom="-30dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             android:id="@+id/cvBody"
             motion:layout_constraintTop_toTopOf="@+id/cvHeader" />
