--- a/app/src/main/res/xml/fragment_recipe_details_xml_constraintlayout3_scene.xml
+++ b/app/src/main/res/xml/fragment_recipe_details_xml_constraintlayout3_scene.xml
@@ -18,6 +18,16 @@
 
     <ConstraintSet android:id="@+id/start">
 
+        <Constraint
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="-30dp"
+            motion:layout_constraintTop_toBottomOf="@+id/cvHeader"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="-30dp"
+            android:id="@+id/cvBody" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -27,10 +37,12 @@
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="-30dp"
             android:layout_marginBottom="-30dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             android:id="@+id/cvBody"
             motion:layout_constraintTop_toTopOf="@+id/cvHeader" />
+
     </ConstraintSet>
 </MotionScene>
