--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -21,6 +21,11 @@
         tools:layout="@layout/fragment_recipe_details" >
         <argument
             android:name="recipe"
-            app:argType="com.example.thecookbook.data.models.RecipeDataItem" />
+            app:argType="com.example.thecookbook.data.access.remote.models.Recipe" />
     </fragment>
+    <fragment
+        android:id="@+id/timerFragment"
+        android:name="com.example.thecookbook.Timer.TimerFragment"
+        android:label="fragment_timer"
+        tools:layout="@layout/fragment_timer" />
 </navigation>
