--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,9 +26,11 @@
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navView"
+            android:paddingTop="50dp"
             android:layout_gravity="start"
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
+            app:headerLayout="@layout/nav_header"
             app:menu="@menu/menu" />
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
