--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".camera.CameraFragment">
+        tools:context=".ui.camera.CameraFragment">
 
         <ImageView
             android:id="@+id/ivMeal"
