--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -25,12 +25,23 @@
         <action
             android:id="@+id/action_recipeDetailsFragment_to_cameraFragment"
             app:destination="@id/cameraFragment" />
+        <action
+            android:id="@+id/action_recipeDetailsFragment_to_recipeImagesFragment"
+            app:destination="@id/recipeImagesFragment" />
     </fragment>
     <fragment
         android:id="@+id/cameraFragment"
         android:name="com.example.thecookbook.ui.camera.CameraFragment"
         android:label="fragment_camer"
         tools:layout="@layout/fragment_camera" >
+        <argument
+            android:name="recipeId"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/recipeImagesFragment"
+        android:name="com.example.thecookbook.ui.recipeImages.RecipeImagesFragment"
+        android:label="fragment_recipe_images" >
         <argument
             android:name="recipeId"
             app:argType="string" />
