--- a/app/src/main/res/layout/fragment_recipe_images.xml
+++ b/app/src/main/res/layout/fragment_recipe_images.xml
@@ -4,10 +4,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.thecookbook.ui.camera.CameraViewModel" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.recipeImages.RecipeImagesFragment">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fadeVisible="@{viewModel.showNoConnection.booleanValue()}"
+            android:gravity="center"
+            android:text="No Internet Connection."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btnBack"
