--- a/app/src/main/res/layout/fragment_recipe_images_item.xml
+++ b/app/src/main/res/layout/fragment_recipe_images_item.xml
@@ -29,7 +29,8 @@
                 android:id="@+id/imageView"
                 imageUrl="@{image.downloadUrl}"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:contentDescription="@string/user_meal_image" />
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -38,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="24dp"
-            android:hint="Firuza"
+            android:hint="@string/user_name"
             android:text="@{image.userName}"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
